--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -7,6 +7,7 @@
   background: #000;
   overflow: hidden;
   margin-left: calc(-50vw + 50%);
+  margin-top: 80px;
   display: flex;
   align-items: center;
   justify-content: center;
